IRSA-924: fix issues found in new image search - add select/deselect all at the dataproduct(project) level - fix mission filter now that mission info is available - make count returns the number of dataproduct instead of bands(images) - make CollapsiblePanel's header takes a string or a component. - make ImageSelect requires a way to register changeListener - fix firefly-dev.html not showing images - add option to FormPanel to allow unmounted fields in the request - set NewImageSearchPanel to take unmounted fields

--- a/src/firefly/js/ui/ImageSelect.css
+++ b/src/firefly/js/ui/ImageSelect.css
@@ -80,10 +80,11 @@
 }
 
 .DataProductList__item--header {
-    margin-left: 5px;
-    font-size: large;
-    font-weight: bold;
-    color: #005da4;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: -5px;
 }
 
 .DataProductList__item--details {
@@ -102,4 +103,7 @@
     white-space: nowrap;
     text-align: right;
     margin: 2px 2px 0 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100px;
 }
